src/test/ui/const-generics/defaults/doesnt_infer.stderr
error[E0282]: type annotations needed for `Foo<{_: u32}>`
  --> $DIR/doesnt_infer.rs:11:15
   |
LL |     let foo = Foo::foo();
   |         ---   ^^^^^^^^ cannot infer the value of const parameter `N`
   |         |
   |         consider giving `foo` the explicit type `Foo<N>`, where the const parameter `N` is specified

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
